k8s/03-deployment-server.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone-server
  labels:
    app: drone
    component: server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: drone
        component: server
    spec:
      containers:
      - name: drone-server
        image: "docker.nixaid.com:5010/drone/drone:latest"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        - name: grpc
          containerPort: 9000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        volumeMounts:
          - name: data
            mountPath: /var/lib/drone
      volumes:
      - name: data
        emptyDir: {}
