k8s/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone-svc
  labels:
    app: drone
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8000
  - name: grpc
    port: 9000
    targetPort: 9000
  selector:
    app: drone
    component: server
